--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div class="wrapper">
-		<header class="header">Я шапка</header>
+		<header class="header"></header>
 		<main class="page">
 			<div class="page__main main-page">
 				<div class="main-page__container">
@@ -32,7 +32,7 @@
 				</div>
 			</div>
 		</main>
-		<footer class="footer">Подвал</footer>
+		<footer class="footer"></footer>
 	</div>
 	<script type="module" src="./main.js"></script>
 </body>
